--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/logo.png" alt="" /></span>
 						<h1>Rocket Accomplish</h1>
 						<p>Free tutoring for K-8</p>
 					</header>
@@ -60,21 +60,21 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="icon solid major style1 fa-user-friends"></span>
 										<h3>100% Free</h3>
 										<p>Our mission won't change and we will remain 100% free!
 
 										</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style3 fa-gem"></span>
 										<h3>Trained and Verified Coaches</h3>
 										<p>Our coaches are to help you in whatever subject that may be troubling you. All of our coaches are volunteers who have a passion for teaching!
 
 										</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="icon major style5 fa-question-circle"></span>
 										<h3>We are Here to Help</h3>
 										<p>Never feel embarrassed to ask any question. Our tutors are here to support you.
 
@@ -83,7 +83,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="students.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -110,7 +110,7 @@
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://forms.gle/dNvEaiiPej9ta2wg9" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="students.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
