--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										</header>
 										<p>We are a non-profit that connects K-9 students who can't afford private tutoring with honor-roll high school students who want to contribute the community. Several of our tutors, including us founders, have gone through the academic challenges and have overcome the struggles. We know that we can not only help you with your school work, but also share with you lots of tips for improving your study skills.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="students.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
