--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" type="image/x-icon" href="images/icon.png" />
 	</head>
 	<body class="is-preload">
 
@@ -134,7 +135,7 @@
 							</dl>
 						
 						</section>
-						<p class="copyright">&copy; Aiden Huang. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Untitled. Design: @ajlkn for <a href="https://html5up.net">HTML5 UP</a>. RocketAccomplish is under fiscal sponsorship of a 501(c)(3) nonprofit organization.</p>
 					</footer>
 
 			</div>
