--- a/students.html
+++ b/students.html
@@ -58,7 +58,7 @@
 							</dl>
 							
 						</section>
-						<p class="copyright">&copy; Untitled. Design: @ajlkn for <a href="https://html5up.net">HTML5 UP</a>. RocketAccomplish is under fiscal sponsorship of a 501(c)(3) nonprofit organization.</p>
+						<p class="copyright">&copy; Untitled. Design: @ajlkn for <a href="https://html5up.net">HTML5 UP</a>. RocketAccomplish.com is a nonprofit organization that operates under the auspices of Pledges, Inc, a 501c3 nonprofit organization based out of Delaware.</p>
 					</footer>
 
 			</div>
